--- a/estilos/mediaqueries.css
+++ b/estilos/mediaqueries.css
@@ -6,8 +6,8 @@
     }
 
     section#login {
-        width: 90vw;
-        
+        width: 90vw; 
+        height: 280px;   
     }
 
     section#login > div#imagem {
@@ -29,16 +29,28 @@
 
     section#login {
         width: 950px;
+        height: 400px;
     }
 
     section#login > div#imagem {
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
 
     section#login > div#formulario {
-        float: right;
+        float: left;
         width: 50%;
     }
+
+    div#formulario > h1 {
+        font-size: 1.2em;
+    }
+
+    div#formulario > p {
+        font-size: 1.2em;
+        margin: 20px 0px;
+    }
+
 }
+
